# agent-detector

./: .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  release-plz.toml
.github/workflows/: ci.yml  release.yml
src/: agents.rs  lib.rs  main.rs  process.rs
