[package]
name = "agent-detector"
version = "0.1.0"
edition = "2024"
license = "MIT"

[[bin]]
name = "whichagent"
path = "src/main.rs"

[features]
default = ["process-tree"]
process-tree = ["dep:sysinfo"]

[dependencies]
sysinfo = { version = "0.38", optional = true }

[lints.clippy]
all = "deny"
pedantic = "deny"
unwrap_used = "deny"
expect_used = "deny"
dbg_macro = "deny"
todo = "deny"
unimplemented = "deny"
