[package]
name = "agent-detector"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
description = "Detect whether an AI coding agent is the caller, enabling automatic agent-friendly output for Rust CLI applications."
homepage = "https://github.com/dtcxzyw/agent-detector"
repository = "https://github.com/dtcxzyw/agent-detector"
readme = "README.md"
keywords = ["agent", "cli", "detection", "ai", "coding-assistant"]
categories = ["command-line-interface", "development-tools"]

[[bin]]
name = "whichagent"
path = "src/main.rs"

[features]
default = ["process-tree"]
process-tree = ["dep:sysinfo"]

[dependencies]
sysinfo = { version = "0.38", optional = true }

[lints.clippy]
all = "deny"
pedantic = "deny"
unwrap_used = "deny"
expect_used = "deny"
dbg_macro = "deny"
todo = "deny"
unimplemented = "deny"
undocumented_unsafe_blocks = "deny"

[lints.rust]
missing_docs = "deny"
